Mine poetry by line for amulets

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amulet Miner</title>
-    
+
     <script src="./js/lib/sha256.min.js"></script>
 </head>
 <body>
     
+    <script src="./js/yeats.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
