Add text input, mine button, and mined amulets list

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <script src="./js/lib/sha256.min.js"></script>
 </head>
 <body>
+    <textarea id="text-input" rows=25 cols=75></textarea>
+    <button id="mine-btn">Mine Text</button>
+
+    <div>
+        <h3>Mined Amulets</h3>
+        <ul id="mined-amulets"></ul>
+    </div>
     
     <script src="./js/yeats.js"></script>
+    <script src="./js/eliot.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
